--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       </div>
       <div class="fade-in">
         <img src="./images/visual_cup2.png" alt="new STARBUCKS CARAMEL CRUMBLE MOCHA" class="cup2 image" />
-        <img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 크럼블 모카" class="cup2 text" />
+        <img src="./images/visual_cup2_text.png" alt="스타벅스 카라 크럼블 모카" class="cup2 text" />
       </div>
       <div class="fade-in">
         <img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
